--- a/Develop/package.json
+++ b/Develop/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
-    "mongoose": "^5.3.16",
-    "morgan": "^1.9.1"
+    "express": "^4.17.1",
+    "logger": "0.0.1",
+    "mongoose": "^5.9.18",
+    "morgan": "^1.10.0",
+    "router": "^1.3.5"
   }
 }
