--- a/Develop/package.json
+++ b/Develop/package.json
@@ -15,7 +15,6 @@
     "express": "^4.17.1",
     "logger": "0.0.1",
     "mongoose": "^5.9.18",
-    "morgan": "^1.10.0",
-    "router": "^1.3.5"
+    "morgan": "^1.10.0"
   }
 }
